testing with selenium - 1st steps